# app/swagger/swagger.json
@@ -9,7 +9,7 @@
       "url": "https://opensource.org/licenses/MIT"
     }
   },
-  "basePath": "/user/v1/",
+  "basePath": "/user/api/v1/",
   "schemes": ["http", "https"],
   "consumes": ["application/json"],
   "produces": ["application/json"],
@@ -90,74 +90,6 @@
         }
       }
     },
-    "/admin/sendOTP": {
-      "post": {
-        "tags": ["Admin Module"],
-        "security": [{ "Bearer": [] }],
-        "summary": "Admin Login Page",
-        "parameters": [
-          {
-            "name": "AdminLogin",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/sendOTP"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Return a JSON response with submitted Aman form details.",
-            "schema": { "$ref": "#/definitions/response" }
-          },
-          "404": {
-            "description": "Validation failure.",
-            "schema": {
-              "$ref": "#/definitions/validationError"
-            }
-          },
-          "default": {
-            "description": "Unexpected error.",
-            "schema": {
-              "$ref": "#/definitions/error"
-            }
-          }
-        }
-      }
-    },
-    "/admin/verifyOTP": {
-      "post": {
-        "tags": ["Admin Module"],
-        "security": [{ "Bearer": [] }],
-        "summary": "Admin Login Page",
-        "parameters": [
-          {
-            "name": "AdminLogin",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/verifyOTP"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Return a JSON response with submitted Aman form details.",
-            "schema": { "$ref": "#/definitions/response" }
-          },
-          "404": {
-            "description": "Validation failure.",
-            "schema": {
-              "$ref": "#/definitions/validationError"
-            }
-          },
-          "default": {
-            "description": "Unexpected error.",
-            "schema": {
-              "$ref": "#/definitions/error"
-            }
-          }
-        }
-      }
-    },
     "/admin/updateProfile": {
       "put": {
         "tags": ["Admin Module"],
@@ -165,7 +97,7 @@
         "summary": "update admin Details",
         "parameters": [
           {
-            "name": "adminId",
+            "name": "id",
             "in": "query",
             "type": "string"
           },
@@ -204,7 +136,7 @@
         "summary": "get admin details",
         "parameters": [
           {
-            "name": "adminId",
+            "name": "id",
             "in": "query",
             "type": "string"
           }
@@ -273,7 +205,7 @@
         "summary": "delete Admin",
         "parameters": [
           {
-            "name": "adminId",
+            "name": "id",
             "in": "query",
             "type": "string"
           }
@@ -298,51 +230,18 @@
         }
       }
     },
+   
     "/authorizedPerson/addProfile": {
       "post": {
-        "tags": ["Admin Module"],
+        "tags": ["AuthorizedPerson Module"],
         "security": [{ "Bearer": [] }],
-        "summary": "Admin Profile Create",
+        "summary": "AuthorizedPerson Profile Create",
         "parameters": [
           {
-            "name": "AdminCreate",
+            "name": "AuthorizedPersonCreate",
             "in": "body",
             "schema": {
-              "$ref": "#/definitions/adminLogin"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Return a JSON response with submitted Aman form details.",
-            "schema": { "$ref": "#/definitions/response" }
-          },
-          "404": {
-            "description": "Validation failure.",
-            "schema": {
-              "$ref": "#/definitions/validationError"
-            }
-          },
-          "default": {
-            "description": "Unexpected error.",
-            "schema": {
-              "$ref": "#/definitions/error"
-            }
-          }
-        }
-      }
-    },
-    "/authorizedPerson/login": {
-      "post": {
-        "tags": ["Admin Module"],
-        "security": [{ "Bearer": [] }],
-        "summary": "Admin Login Page",
-        "parameters": [
-          {
-            "name": "AdminLogin",
-            "in": "body",
-            "schema": {
-              "$ref": "#/definitions/authorizedPersonLogin"
+              "$ref": "#/definitions/authorizedPersonCreate"
             }
           }
         ],
@@ -368,12 +267,12 @@
     },
     "/authorizedPerson/sendOTP": {
       "post": {
-        "tags": ["Admin Module"],
+        "tags": ["AuthorizedPerson Module"],
         "security": [{ "Bearer": [] }],
-        "summary": "Admin Login Page",
+        "summary": "AuthorizedPerson Login Page",
         "parameters": [
           {
-            "name": "AdminLogin",
+            "name": "AuthorizedPerson",
             "in": "body",
             "schema": {
               "$ref": "#/definitions/sendOTP"
@@ -402,7 +301,7 @@
     },
     "/authorizedPerson/verifyOTP": {
       "post": {
-        "tags": ["Admin Module"],
+        "tags": ["AuthorizedPerson Module"],
         "security": [{ "Bearer": [] }],
         "summary": "Admin Login Page",
         "parameters": [
@@ -436,17 +335,17 @@
     },
     "/authorizedPerson/updateProfile": {
       "put": {
-        "tags": ["Admin Module"],
+        "tags": ["AuthorizedPerson Module"],
         "security": [{ "Bearer": [] }],
-        "summary": "update admin Details",
+        "summary": "update AuthorizedPerson Details",
         "parameters": [
           {
-            "name": "adminId",
+            "name": "id",
             "in": "query",
             "type": "string"
           },
           {
-            "name": "adminUpdate",
+            "name": "AuthorizedPersonUpdate",
             "in": "body",
             "schema": {
               "$ref": "#/definitions/authorizedPersonUpdate"
@@ -475,12 +374,12 @@
     },
     "/authorizedPerson/getProfile": {
       "get": {
-        "tags": ["Admin Module"],
+        "tags": ["AuthorizedPerson Module"],
         "security": [{ "Bearer": [] }],
-        "summary": "get admin details",
+        "summary": "get AuthorizedPerson details",
         "parameters": [
           {
-            "name": "authorizedPersonId",
+            "name": "id",
             "in": "query",
             "type": "string"
           }
@@ -507,9 +406,9 @@
     },
     "/authorizedPerson/list": {
       "get": {
-        "tags": ["Admin Module"],
+        "tags": ["AuthorizedPerson Module"],
         "security": [{ "Bearer": [] }],
-        "summary": "List all admin",
+        "summary": "List all AuthorizedPerson",
         "parameters": [
           {
             "name": "limit",
@@ -544,12 +443,187 @@
     },
     "/authorizedPerson/delete": {
       "delete": {
-        "tags": ["Admin Module"],
+        "tags": ["AuthorizedPerson Module"],
         "security": [{ "Bearer": [] }],
-        "summary": "delete Admin",
+        "summary": "delete AuthorizedPerson",
         "parameters": [
           {
-            "name": "authorizedPersonId",
+            "name": "id",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Return a JSON response with submitted Aman form details.",
+            "schema": { "$ref": "#/definitions/response" }
+          },
+          "404": {
+            "description": "Validation failure.",
+            "schema": {
+              "$ref": "#/definitions/validationError"
+            }
+          },
+          "default": {
+            "description": "Unexpected error.",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      }
+    },
+    "/clientFamily/addProfile": {
+      "post": {
+        "tags": ["Client Family Module"],
+        "security": [{ "Bearer": [] }],
+        "summary": "clientFamily Profile Create",
+        "parameters": [
+          {
+            "name": "clientFamilyCreate",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/clientFamilyCreate"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Return a JSON response with submitted Aman form details.",
+            "schema": { "$ref": "#/definitions/response" }
+          },
+          "404": {
+            "description": "Validation failure.",
+            "schema": {
+              "$ref": "#/definitions/validationError"
+            }
+          },
+          "default": {
+            "description": "Unexpected error.",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      }
+    },
+   
+    "/clientFamily/updateProfile": {
+      "put": {
+        "tags": ["Client Family Module"],
+        "security": [{ "Bearer": [] }],
+        "summary": "update clientFamily Details",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "type": "string"
+          },
+          {
+            "name": "clientFamilyUpdate",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/clientFamilyUpdate"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Return a JSON response with submitted Aman form details.",
+            "schema": { "$ref": "#/definitions/response" }
+          },
+          "404": {
+            "description": "Validation failure.",
+            "schema": {
+              "$ref": "#/definitions/validationError"
+            }
+          },
+          "default": {
+            "description": "Unexpected error.",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      }
+    },
+    "/clientFamily/getProfile": {
+      "get": {
+        "tags": ["Client Family Module"],
+        "security": [{ "Bearer": [] }],
+        "summary": "get clientFamily details",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Return a JSON response with submitted Aman form details.",
+            "schema": { "$ref": "#/definitions/response" }
+          },
+          "404": {
+            "description": "Validation failure.",
+            "schema": {
+              "$ref": "#/definitions/validationError"
+            }
+          },
+          "default": {
+            "description": "Unexpected error.",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      }
+    },
+    "/clientFamily/list": {
+      "get": {
+        "tags": ["Client Family Module"],
+        "security": [{ "Bearer": [] }],
+        "summary": "List all AuthorizedPerson",
+        "parameters": [
+          {
+            "name": "limit",
+            "in": "query",
+            "type": "number"
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "type": "number"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Return a JSON response with submitted Aman form details.",
+            "schema": { "$ref": "#/definitions/response" }
+          },
+          "404": {
+            "description": "Validation failure.",
+            "schema": {
+              "$ref": "#/definitions/validationError"
+            }
+          },
+          "default": {
+            "description": "Unexpected error.",
+            "schema": {
+              "$ref": "#/definitions/error"
+            }
+          }
+        }
+      }
+    },
+    "/clientFamily/delete": {
+      "delete": {
+        "tags": ["Client Family Module"],
+        "security": [{ "Bearer": [] }],
+        "summary": "delete AuthorizedPerson",
+        "parameters": [
+          {
+            "name": "id",
             "in": "query",
             "type": "string"
           }
@@ -637,9 +711,6 @@
         },
         "isActive": {
           "type": "string"
-        },
-        "password": {
-          "type": "string"
         }
       }
     },
@@ -685,9 +756,6 @@
         },
         "isActive": {
           "type": "string"
-        },
-        "password": {
-          "type": "string"
         }
       }
     },
@@ -715,8 +783,55 @@
       "properties": {
         "mobileNumber": {
           "type": "string"
+        }
+      }
+    },
+    "clientFamilyCreate": {
+      "properties": {
+        "clientName": {
+          "type": "string"
         },
-        "otp": {
+        "dateOfBirth": {
+          "type": "string"
+        },
+        "relativeName": {
+          "type": "string"
+        },
+        "relationShip": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "mobileNumber": {
+          "type": "string"
+        },
+        "isActive": {
+          "type": "string"
+        }
+      }
+    },
+    "clientFamilyUpdate": {
+      "properties": {
+        "clientName": {
+          "type": "string"
+        },
+        "dateOfBirth": {
+          "type": "string"
+        },
+        "relativeName": {
+          "type": "string"
+        },
+        "relationShip": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "mobileNumber": {
+          "type": "string"
+        },
+        "isActive": {
           "type": "string"
         }
       }
